[metadata]
name = OurvleApi
version = 0.3.1
author = Alexander McIntosh
author_email = mcintoshalexander80@gmail.com
description = Unofficial module for Ourvle
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alexcmad/OurvleScraper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
install_requires =
    beautifulsoup4==4.11.2
    requests==2.28.1
